--- a/cultureHS.html
+++ b/cultureHS.html
@@ -72,7 +72,7 @@
           
              <p class="opacity-low"><a href="details.html">دار الثقافة 
 </a></p>
-             <p class="opacity-low"><a href="cooking.html">دار الشباب </a></p>
+             <p class="opacity-low"><a href="benarous.html">دار الشباب </a></p>
          
           </div>
         </div>
