--- a/benarous.html
+++ b/benarous.html
@@ -60,7 +60,7 @@
     </div>
     <h1>دار الشباب</h1>
     <div id="columns">
-<img src="img/chabeb.jpg "  class="img-fluid" alt="benarous">
+<img src="chabeb.jpg "  class="img-fluid" alt="benarous">
 
       </div>
 
