--- a/benarous.html
+++ b/benarous.html
@@ -59,7 +59,7 @@
 
     </div>
     <h1>دار الشباب</h1>
-    <div id="columns">
+    <div class="">
 <img src="chabeb.jpg "  class="img-fluid" alt="benarous">
 
       </div>
