--- a/benarous.html
+++ b/benarous.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="/img/log0 (1).jpg">
+    <link rel="icon" type="image/x-icon" href="logo.jpg">
     <link href="details.css" rel="stylesheet">
     <title>Chabab'in about us</title>
   </head>
