--- a/benarous.html
+++ b/benarous.html
@@ -60,9 +60,10 @@
     </div>
     <h1>دار الشباب</h1>
     <div class="text-center">
+    <div class=" .col-6 .col-md-4">
 <img src="chabeb.jpg "  class="img-fluid" alt="benarous">
 
-      </div>
+      </div></div>
 
 
 
