--- a/benarous.html
+++ b/benarous.html
@@ -61,7 +61,7 @@
     <h1>دار الشباب</h1>
     <div class="text-center">
     <div class=" .col-6 .col-md-4">
-<img src="chabeb.jpg "  class="img-fluid" alt="benarous">
+<img src="chabeb.jpg "  class="rounded mx-auto d-block" alt="benarous">
 
       </div></div>
 
