--- a/benarous.html
+++ b/benarous.html
@@ -59,11 +59,11 @@
 
     </div>
     <h1>دار الشباب</h1>
-   <div class="text-center">
-    <div class="col-6 col-md-4">
-        <img src="chabeb.jpg" class="img-fluid" alt="benarous" style="width: 50%;">
+  
+    <div class="col-6 col-md-4 text-center">
+        <img src="chabeb.jpg" class="img-fluid" alt="benarous" style="width: 70%;">
     </div>
-</div>
+
 
 
 
