--- a/benarous.html
+++ b/benarous.html
@@ -59,12 +59,9 @@
 
     </div>
     <h1>دار الشباب</h1>
-  
-    <div class="col-6 col-md-4 text-center">
-        <img src="chabeb.jpg" class="img-fluid" alt="benarous" style="width: 70%;">
-    </div>
-
-
+  <div class="text-center">
+  <img src="chabeb.jpeg" class="rounded" alt="..." style="width: 50%;">
+</div>
 
 
 
