--- a/benarous.html
+++ b/benarous.html
@@ -26,7 +26,7 @@
             <div class="col-12">
               <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="/">CHABAB'IN</a>
+                  <a class="navbar-brand" href="index.html">CHABAB'IN</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
