--- a/benarous.html
+++ b/benarous.html
@@ -60,7 +60,7 @@
     </div>
     <h1>دار الشباب</h1>
   <div class="text-center">
-  <img src="chabeb.jpeg" class="rounded" alt="..." style="width: 50%;">
+  <img src="chabeb.jpg" class="rounded" alt="..." style="width: 50%;">
 </div>
 
 
